--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <button id ='clickBtn'>Submit</button>
 
     <div id = 'parentContainer'>
-        
+
     </div>
+    <button id = 'deleteAll'>Delete All</button>
 </body>
 </html>
